<resources>
    <string name="app_name">Fresh Cart</string>
    <string name="home">Home</string>
    <string name="cart">Shopping Cart</string>
    <string name="search">Search</string>
    <string name="product">Product</string>
    <string name="toolbar_title">FreshCart</string>
    <string name="arrow_back">Arrow Back</string>
    <string name="navigation_menu">Navigation Menu</string>
    <string name="login_tip">Username or Email</string>
    <string name="password_tip">Password</string>
    <string name="remember_me">&#160;&#160;Remember Me</string>
    <string name="forgot_password"><u>Forgot Password ?</u></string>
    <string name="sign_in">Sign in</string>
    <string name="not_member">Not a Member ? <u>Sign up now</u></string>
    <string name="login_title">Login</string>
    <!-- Sign Up -->
    <string name="sign_up_full_name">Full Name</string>
    <string name="sign_up_username">Username</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="agree_to_the">&#160;&#160;Agree to the</string>
    <string name="terms_and_conditions"> <u>terms and conditions</u></string>
    <string name="have_an_account">Have an Account ? <b>Sign In</b></string>
    <!-- Login / Sign Up error messages -->
    <string name="empty_pass">Password can\'t be empty</string>
    <string name="empty_email">Email can\'t be empty</string>
    <string name="email_not_valid">Input valid email</string>
    <string name="pass_not_valid">Password is not valid</string>
    <string name="short_pass">Password must be 6 digits or longer</string>
    <string name="empty_fields">Input fields can\'t be empty</string>
    <string name="wrong_login_or_pass">Wrong login or password</string>

    <!-- Main Fragment -->
    <string name="deal_of_the_day">Deal of the Day</string>
    <string name="all_products">All products</string>
    <string name="discount">Get %1$d$ Off</string>
    <string name="discount_description">On your first order</string>
    <string name="shop_now">Shop Now</string>
    <string name="ok">OK</string>

    <!--Product Fragment -->
    <string name="add_to_cart">Add to Cart</string>
    <string name="empty_string" />
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever
        since the 1500s. </string>
    <string name="min_order_if_cash">cash on delivery avaliable all below $100</string>
    <string name="increase_product_count">Increase quantity by 1</string>
    <string name="decrease_product_count">Decrease quantity by 1</string>
    <string name="price_total">Total</string>
    <string name="title_delivery_charge">Delivery Charge</string>
    <string name="price_sub_total">Sub Total</string>
    <string name="proceed_to_checkout">Proceed To Checkout</string>
    <string name="price_template">$%,.2f</string>
    <string name="empty_cart_tip">Ups, your cart is empty</string>
    <string name="products_added">Added %d %ss to cart</string>
    <string name="product_not_found">Product Not Found</string>

    <!--Search Fragment -->
    <string name="search_label">Search Specific Item</string>
    <string name="nothing_found">Nothing Found For "\"%1$s"\"</string>
    <string name="fresh_fruits">Fresh Fruits</string>
    <string name="festival_season_is_here">Festival Season is Here</string>
    <string name="what_do_you_like">What Do You Like?</string>
    <string name="fruits">Fruits</string>
    <string name="vegetables">Vegetables</string>
    <string name="legumes">Legumes</string>

</resources>