<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="loginViewModel"
            type="com.jsp.freshcartshop.viewmodel.LoginViewModel"/>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/signIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.LoginActivity"
        android:background="?attr/bcColor"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_medium"
                >

                <TextView
                    android:id="@+id/welcomeLogo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:gravity="center_horizontal"
                    android:text="@string/app_name"
                    android:textColor="?attr/primaryColor"
                    android:fontFamily="@font/fortemt"
                    android:textSize="@dimen/extra_large_font"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:hint="@string/login_tip"
                    app:boxBackgroundColor="?attr/whiteColor"
                    app:boxStrokeColor="?attr/primaryColor"
                    android:fontFamily="@font/poppins_medium"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="text"
                        android:textSize="@dimen/large_font"
                        android:textColor="?attr/grayColor"
                        app:boxStrokeColor="?attr/primaryColor"
                        android:background="?attr/bcColor"
                        android:fontFamily="@font/poppins_medium"
                        android:paddingBottom="@dimen/padding_extra_small"
                        android:text="@={loginViewModel.login}"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_tip"
                    app:boxBackgroundColor="?attr/whiteColor"
                    app:boxStrokeColor="?attr/primaryColor"
                    android:fontFamily="@font/poppins_medium"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/padding_small"
                        android:paddingBottom="@dimen/padding_extra_small"
                        android:inputType="textPassword"
                        android:textSize="@dimen/large_font"
                        android:textColor="?attr/grayColor"
                        app:boxStrokeColor="?attr/primaryColor"
                        android:background="?attr/bcColor"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@={loginViewModel.password}"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="30dp"
                    >

                    <CheckBox
                        android:id="@+id/cbRememberMe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        style="@style/SmallLoginTextViews"
                        android:button="@drawable/checkbox_selector"
                        android:hint="@string/remember_me"
                        />

                    <TextView
                        android:id="@+id/tvForgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/forgot_password"
                        style="@style/SmallLoginTextViews"
                        android:fontFamily="@font/poppins_medium"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/signInButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_medium"
                    android:backgroundTint="?attr/primaryColor"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingTop="@dimen/big_button_padding"
                    android:paddingBottom="@dimen/big_button_padding"
                    android:text="@string/sign_in"
                    android:textAppearance="@style/TabTextAppearance"
                    android:textColor="?attr/whiteColor"
                    android:textSize="@dimen/large_font"
                    app:cornerRadius="?attr/actionBarSize"
                    />

                <TextView
                    android:id="@+id/tvNotMember"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_small"
                    android:text="@string/not_member"
                    style="@style/SmallLoginTextViews"
                    android:gravity="center"
                    />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padding_small"
                    android:paddingRight="@dimen/padding_small"
                    android:layout_marginTop="@dimen/padding_small"
                    >

                    <ImageView
                        android:id="@+id/facebookImageView"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/instagramImageView"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:padding="@dimen/padding_small"
                        style="@style/SocialNetworkIconLogin"
                        android:background="@drawable/rounded_shape"
                        android:src="@drawable/ic_facebook"
                        />

                    <ImageView
                        android:id="@+id/instagramImageView"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:padding="@dimen/padding_small"
                        style="@style/SocialNetworkIconLogin"
                        android:background="@drawable/rounded_shape"
                        android:src="@drawable/ic_instagram"
                        />

                    <ImageView
                        android:id="@+id/twitterImageView"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/instagramImageView"
                        app:layout_constraintTop_toTopOf="parent"
                        android:padding="@dimen/padding_small"
                        style="@style/SocialNetworkIconLogin"
                        android:background="@drawable/rounded_shape"
                        android:src="@drawable/ic_twitter"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </ScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>