<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="promotion"
            type="com.jsp.freshcartshop.model.Promotion"
            />

    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvSecondPromotion"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_medium"
        app:cardCornerRadius="@dimen/cardview_corner_radius"
        app:cardElevation="0dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageView
                android:id="@+id/imgBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:image="@{promotion.image}"
                android:scaleType="centerCrop"
                tools:src="@drawable/img_placeholder"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#B3000000"
                />

            <TextView
                android:id="@+id/tvPromotionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvShopNowPromotion"
                android:layout_marginStart="@dimen/margin_medium"
                android:text="@{promotion.title}"
                android:textColor="?attr/whiteColor"
                android:textSize="@dimen/large_font"
                android:textStyle="bold"
                tools:text="@string/fresh_fruits"
                />

            <TextView
                android:id="@+id/tvPromotionDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/tvShopNowPromotion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPromotionTitle"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@{promotion.description}"
                android:textColor="?attr/whiteColor"
                android:textSize="@dimen/small_font"
                tools:text="@string/festival_season_is_here"
                />

            <TextView
                android:id="@+id/tvShopNowPromotion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_medium"
                android:background="@drawable/bc_button_rounded_white"
                android:padding="12dp"
                android:text="@string/shop_now"
                android:textColor="?attr/whiteColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>