<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
    </data>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            android:paddingStart="@dimen/padding_small"
            android:paddingTop="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_small">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/shopping_cart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:itemCount="10"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent">

                        <TextView
                            android:id="@+id/title_price_total"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/price_total"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            style="@style/TotalPriceStyle"
                            />

                        <TextView
                            android:id="@+id/total_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text='$25.00'
                            style="@style/TotalPriceStyle"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_delivery_charge"
                            android:fontFamily="@font/poppins_medium"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/title_price_total"
                            android:paddingBottom="@dimen/padding_small"
                            android:textSize="@dimen/medium_font"
                            />

                        <TextView
                            android:id="@+id/delivery_charge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text='$5.00'
                            android:textSize="@dimen/medium_font"
                            android:fontFamily="@font/poppins_medium"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/title_price_total"
                            />

                        <View
                            android:id="@+id/line_separator"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorPrimary"
                            android:layout_marginTop="@dimen/margin_small"
                            app:layout_constraintTop_toBottomOf="@id/delivery_charge"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_small"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/line_separator"
                            style="@style/TotalPriceStyle"
                            android:text="@string/price_sub_total"
                            android:textStyle="bold"
                            />

                        <TextView
                            android:id="@+id/price_sub_total"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TotalPriceStyle"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/line_separator"
                            android:layout_marginTop="@dimen/margin_small"
                            android:text="$40.00"
                            android:textStyle="bold"
                            />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_product_card_button"
                            android:backgroundTint="@color/colorWhite"
                            app:layout_constraintTop_toBottomOf="@id/price_sub_total"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginTop="@dimen/margin_medium"
                            android:padding="@dimen/padding_xs"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/proceed_to_checkout"
                                android:fontFamily="@font/poppins_medium"
                                android:textSize="@dimen/medium_font"
                                android:textStyle="bold"
                                android:textColor="@color/colorPrimary"
                                />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_sharp_arrow_right"
                                android:layout_marginLeft="@dimen/margin_small"
                                />
                        </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>